WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88330
[Qt] Fix harmattan builds broken by
r119247
.
https://bugs.webkit.org/show_bug.cgi?id=88330
Summary
[Qt] Fix harmattan builds broken by r119247.
Michael Brüning
Reported
2012-06-05 07:42:03 PDT
[Qt] Fix harmattan builds broken by
r119247
.
Attachments
Patch
(3.74 KB, patch)
2012-06-05 07:42 PDT
,
Michael Brüning
no flags
Details
Formatted Diff
Diff
Patch
(3.87 KB, patch)
2012-06-05 10:05 PDT
,
Michael Brüning
no flags
Details
Formatted Diff
Diff
Patch
(3.89 KB, patch)
2012-06-06 02:27 PDT
,
Michael Brüning
no flags
Details
Formatted Diff
Diff
Patch
(3.89 KB, patch)
2012-06-06 02:59 PDT
,
Michael Brüning
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Michael Brüning
Comment 1
2012-06-05 07:42:25 PDT
Created
attachment 145792
[details]
Patch
Jocelyn Turcotte
Comment 2
2012-06-05 08:51:05 PDT
Comment on
attachment 145792
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=145792&action=review
Looks good, just one comment.
> Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp:370 > +#if OS(DARWIN)
Please protect it with #if defined(GL_ARB_texture_rectangle) instead.
Michael Brüning
Comment 3
2012-06-05 10:05:35 PDT
Created
attachment 145825
[details]
Patch
Jocelyn Turcotte
Comment 4
2012-06-05 10:47:24 PDT
Comment on
attachment 145825
[details]
Patch Un-cq-ing it just to understand why using GL_TEXTURE_RECTANGLE_ARB instead of GL_ARB_texture_rectangle. The later should be used IMO instead (but yet just another nitpick).
Michael Brüning
Comment 5
2012-06-06 02:27:31 PDT
Created
attachment 145966
[details]
Patch
Michael Brüning
Comment 6
2012-06-06 02:59:34 PDT
Created
attachment 145972
[details]
Patch
WebKit Review Bot
Comment 7
2012-06-06 03:25:02 PDT
Comment on
attachment 145972
[details]
Patch Clearing flags on attachment: 145972 Committed
r119579
: <
http://trac.webkit.org/changeset/119579
>
WebKit Review Bot
Comment 8
2012-06-06 03:25:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug