[Qt] Fix harmattan builds broken by r119247. https://bugs.webkit.org/show_bug.cgi?id=88330

Patch by Michael Brüning <michael.bruning@nokia.com> on 2012-06-06
Reviewed by Jocelyn Turcotte.

Fix Harmattan build break caused by undefined constant
GL_TEXTURE_RECTANGLE_ARB by adding defined(GL_ARB_texture_rectangle)
guards around TextureMapperGL::drawTextureRectangleARB.

* platform/graphics/texmap/TextureMapperGL.cpp: Added defined(GL_ARB_texture_rectangle) guards around drawTextureRectangleARB.
(WebCore):
* platform/graphics/texmap/TextureMapperGL.h: Added definded(GL_ARB_texture_rectangle) guards around drawTextureRectangleARB.

Canonical link: https://commits.webkit.org/106241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119579 268f45cc-cd09-0410-ab3c-d52691b4dbfc